jaseci_core/jaseci/jac/jac_parse/jacParser.py
# Generated from jac.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class jacParser(Parser):
    grammarFileName = "jac.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'version'",
        "'-->'",
        "'->'",
        "'<--'",
        "'<-'",
        "'<-->'",
        "'++>'",
        "'+>'",
        "'<++'",
        "'<+'",
        "'<++>'",
        "'str'",
        "'int'",
        "'float'",
        "'list'",
        "'dict'",
        "'bool'",
        "'type'",
        "'graph'",
        "'node'",
        "'ignore'",
        "'take'",
        "'spawn'",
        "'with'",
        "'entry'",
        "'exit'",
        "'length'",
        "'keys'",
        "'context'",
        "'info'",
        "'details'",
        "'activity'",
        "'import'",
        "':'",
        "'::'",
        "'s::'",
        "'l::'",
        "'d::'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'::>'",
        "'{'",
        "'}'",
        "'edge'",
        "'walker'",
        "'async'",
        "'sync'",
        "'test'",
        "'assert'",
        "';'",
        "'='",
        "'+='",
        "'-='",
        "'*='",
        "'/='",
        "':='",
        "<INVALID>",
        "<INVALID>",
        "'if'",
        "'elif'",
        "'else'",
        "'for'",
        "'to'",
        "'by'",
        "'while'",
        "'continue'",
        "'break'",
        "'disengage'",
        "'yield'",
        "'skip'",
        "'report'",
        "'destroy'",
        "'try'",
        "'&'",
        "'.'",
        "<INVALID>",
        "'=='",
        "'<'",
        "'>'",
        "'<='",
        "'>='",
        "'!='",
        "'in'",
        "'subsetof'",
        "'supersetof'",
        "'disjointof'",
        "'anchor'",
        "'has'",
        "'global'",
        "'private'",
        "','",
        "'can'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'%'",
        "'^'",
        "'('",
        "')'",
        "'['",
        "']'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'null'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "TYP_STRING",
        "TYP_INT",
        "TYP_FLOAT",
        "TYP_LIST",
        "TYP_DICT",
        "TYP_BOOL",
        "KW_TYPE",
        "KW_GRAPH",
        "KW_NODE",
        "KW_IGNORE",
        "KW_TAKE",
        "KW_SPAWN",
        "KW_WITH",
        "KW_ENTRY",
        "KW_EXIT",
        "KW_LENGTH",
        "KW_KEYS",
        "KW_CONTEXT",
        "KW_INFO",
        "KW_DETAILS",
        "KW_ACTIVITY",
        "KW_IMPORT",
        "COLON",
        "DBL_COLON",
        "STR_DBL_COLON",
        "LIST_DBL_COLON",
        "DICT_DBL_COLON",
        "NODE_DBL_COLON",
        "EDGE_DBL_COLON",
        "WALKER_DBL_COLON",
        "GRAPH_DBL_COLON",
        "TYPE_DBL_COLON",
        "COLON_OUT",
        "LBRACE",
        "RBRACE",
        "KW_EDGE",
        "KW_WALKER",
        "KW_ASYNC",
        "KW_SYNC",
        "KW_TEST",
        "KW_ASSERT",
        "SEMI",
        "EQ",
        "PEQ",
        "MEQ",
        "TEQ",
        "DEQ",
        "CPY_EQ",
        "KW_AND",
        "KW_OR",
        "KW_IF",
        "KW_ELIF",
        "KW_ELSE",
        "KW_FOR",
        "KW_TO",
        "KW_BY",
        "KW_WHILE",
        "KW_CONTINUE",
        "KW_BREAK",
        "KW_DISENGAGE",
        "KW_YIELD",
        "KW_SKIP",
        "KW_REPORT",
        "KW_DESTROY",
        "KW_TRY",
        "KW_REF",
        "DOT",
        "NOT",
        "EE",
        "LT",
        "GT",
        "LTE",
        "GTE",
        "NE",
        "KW_IN",
        "SUB_OF",
        "SUPER_OF",
        "DISJOINT_OF",
        "KW_ANCHOR",
        "KW_HAS",
        "KW_GLOBAL",
        "KW_PRIVATE",
        "COMMA",
        "KW_CAN",
        "PLUS",
        "MINUS",
        "STAR_MUL",
        "DIV",
        "MOD",
        "POW",
        "LPAREN",
        "RPAREN",
        "LSQUARE",
        "RSQUARE",
        "FLOAT",
        "STRING",
        "BOOL",
        "INT",
        "NULL",
        "NAME",
        "COMMENT",
        "LINE_COMMENT",
        "PY_COMMENT",
        "WS",
        "ErrorChar",
    ]

    RULE_start = 0
    RULE_ver_label = 1
    RULE_import_module = 2
    RULE_import_items = 3
    RULE_import_names = 4
    RULE_element = 5
    RULE_global_var = 6
    RULE_architype = 7
    RULE_walker_block = 8
    RULE_test = 9
    RULE_namespaces = 10
    RULE_walk_entry_block = 11
    RULE_walk_exit_block = 12
    RULE_walk_activity_block = 13
    RULE_attr_block = 14
    RULE_attr_stmt = 15
    RULE_struct_block = 16
    RULE_can_block = 17
    RULE_graph_block = 18
    RULE_graph_block_spawn = 19
    RULE_has_root = 20
    RULE_has_stmt = 21
    RULE_has_assign = 22
    RULE_can_stmt = 23
    RULE_event_clause = 24
    RULE_preset_in_out = 25
    RULE_dotted_name = 26
    RULE_name_list = 27
    RULE_param_list = 28
    RULE_expr_list = 29
    RULE_kw_expr_list = 30
    RULE_code_block = 31
    RULE_node_ctx_block = 32
    RULE_statement = 33
    RULE_if_stmt = 34
    RULE_try_stmt = 35
    RULE_else_from_try = 36
    RULE_elif_stmt = 37
    RULE_else_stmt = 38
    RULE_for_stmt = 39
    RULE_while_stmt = 40
    RULE_ctrl_stmt = 41
    RULE_assert_stmt = 42
    RULE_destroy_action = 43
    RULE_report_action = 44
    RULE_walker_action = 45
    RULE_ignore_action = 46
    RULE_take_action = 47
    RULE_disengage_action = 48
    RULE_yield_action = 49
    RULE_expression = 50
    RULE_assignment = 51
    RULE_copy_assign = 52
    RULE_inc_assign = 53
    RULE_connect = 54
    RULE_logical = 55
    RULE_compare = 56
    RULE_cmp_op = 57
    RULE_nin = 58
    RULE_arithmetic = 59
    RULE_term = 60
    RULE_factor = 61
    RULE_power = 62
    RULE_global_ref = 63
    RULE_atom = 64
    RULE_atom_trailer = 65
    RULE_ability_op = 66
    RULE_ref = 67
    RULE_deref = 68
    RULE_built_in = 69
    RULE_cast_built_in = 70
    RULE_obj_built_in = 71
    RULE_dict_built_in = 72
    RULE_list_built_in = 73
    RULE_string_built_in = 74
    RULE_node_edge_ref = 75
    RULE_node_ref = 76
    RULE_walker_ref = 77
    RULE_graph_ref = 78
    RULE_type_ref = 79
    RULE_edge_ref = 80
    RULE_edge_to = 81
    RULE_edge_from = 82
    RULE_edge_any = 83
    RULE_connect_op = 84
    RULE_connect_to = 85
    RULE_connect_from = 86
    RULE_connect_any = 87
    RULE_list_val = 88
    RULE_index_slice = 89
    RULE_dict_val = 90
    RULE_kv_pair = 91
    RULE_spawn = 92
    RULE_spawn_object = 93
    RULE_spawn_edge = 94
    RULE_node_spawn = 95
    RULE_graph_spawn = 96
    RULE_walker_spawn = 97
    RULE_type_spawn = 98
    RULE_spawn_ctx = 99
    RULE_filter_ctx = 100
    RULE_spawn_assign = 101
    RULE_filter_compare = 102
    RULE_any_type = 103
    RULE_multistring = 104

    ruleNames = [
        "start",
        "ver_label",
        "import_module",
        "import_items",
        "import_names",
        "element",
        "global_var",
        "architype",
        "walker_block",
        "test",
        "namespaces",
        "walk_entry_block",
        "walk_exit_block",
        "walk_activity_block",
        "attr_block",
        "attr_stmt",
        "struct_block",
        "can_block",
        "graph_block",
        "graph_block_spawn",
        "has_root",
        "has_stmt",
        "has_assign",
        "can_stmt",
        "event_clause",
        "preset_in_out",
        "dotted_name",
        "name_list",
        "param_list",
        "expr_list",
        "kw_expr_list",
        "code_block",
        "node_ctx_block",
        "statement",
        "if_stmt",
        "try_stmt",
        "else_from_try",
        "elif_stmt",
        "else_stmt",
        "for_stmt",
        "while_stmt",
        "ctrl_stmt",
        "assert_stmt",
        "destroy_action",
        "report_action",
        "walker_action",
        "ignore_action",
        "take_action",
        "disengage_action",
        "yield_action",
        "expression",
        "assignment",
        "copy_assign",
        "inc_assign",
        "connect",
        "logical",
        "compare",
        "cmp_op",
        "nin",
        "arithmetic",
        "term",
        "factor",
        "power",
        "global_ref",
        "atom",
        "atom_trailer",
        "ability_op",
        "ref",
        "deref",
        "built_in",
        "cast_built_in",
        "obj_built_in",
        "dict_built_in",
        "list_built_in",
        "string_built_in",
        "node_edge_ref",
        "node_ref",
        "walker_ref",
        "graph_ref",
        "type_ref",
        "edge_ref",
        "edge_to",
        "edge_from",
        "edge_any",
        "connect_op",
        "connect_to",
        "connect_from",
        "connect_any",
        "list_val",
        "index_slice",
        "dict_val",
        "kv_pair",
        "spawn",
        "spawn_object",
        "spawn_edge",
        "node_spawn",
        "graph_spawn",
        "walker_spawn",
        "type_spawn",
        "spawn_ctx",
        "filter_ctx",
        "spawn_assign",
        "filter_compare",
        "any_type",
        "multistring",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    TYP_STRING = 12
    TYP_INT = 13
    TYP_FLOAT = 14
    TYP_LIST = 15
    TYP_DICT = 16
    TYP_BOOL = 17
    KW_TYPE = 18
    KW_GRAPH = 19
    KW_NODE = 20
    KW_IGNORE = 21
    KW_TAKE = 22
    KW_SPAWN = 23
    KW_WITH = 24
    KW_ENTRY = 25
    KW_EXIT = 26
    KW_LENGTH = 27
    KW_KEYS = 28
    KW_CONTEXT = 29
    KW_INFO = 30
    KW_DETAILS = 31
    KW_ACTIVITY = 32
    KW_IMPORT = 33
    COLON = 34
    DBL_COLON = 35
    STR_DBL_COLON = 36
    LIST_DBL_COLON = 37
    DICT_DBL_COLON = 38
    NODE_DBL_COLON = 39
    EDGE_DBL_COLON = 40
    WALKER_DBL_COLON = 41
    GRAPH_DBL_COLON = 42
    TYPE_DBL_COLON = 43
    COLON_OUT = 44
    LBRACE = 45
    RBRACE = 46
    KW_EDGE = 47
    KW_WALKER = 48
    KW_ASYNC = 49
    KW_SYNC = 50
    KW_TEST = 51
    KW_ASSERT = 52
    SEMI = 53
    EQ = 54
    PEQ = 55
    MEQ = 56
    TEQ = 57
    DEQ = 58
    CPY_EQ = 59
    KW_AND = 60
    KW_OR = 61
    KW_IF = 62
    KW_ELIF = 63
    KW_ELSE = 64
    KW_FOR = 65
    KW_TO = 66
    KW_BY = 67
    KW_WHILE = 68
    KW_CONTINUE = 69
    KW_BREAK = 70
    KW_DISENGAGE = 71
    KW_YIELD = 72
    KW_SKIP = 73
    KW_REPORT = 74
    KW_DESTROY = 75
    KW_TRY = 76
    KW_REF = 77
    DOT = 78
    NOT = 79
    EE = 80
    LT = 81
    GT = 82
    LTE = 83
    GTE = 84
    NE = 85
    KW_IN = 86
    SUB_OF = 87
    SUPER_OF = 88
    DISJOINT_OF = 89
    KW_ANCHOR = 90
    KW_HAS = 91
    KW_GLOBAL = 92
    KW_PRIVATE = 93
    COMMA = 94
    KW_CAN = 95
    PLUS = 96
    MINUS = 97
    STAR_MUL = 98
    DIV = 99
    MOD = 100
    POW = 101
    LPAREN = 102
    RPAREN = 103
    LSQUARE = 104
    RSQUARE = 105
    FLOAT = 106
    STRING = 107
    BOOL = 108
    INT = 109
    NULL = 110
    NAME = 111
    COMMENT = 112
    LINE_COMMENT = 113
    PY_COMMENT = 114
    WS = 115
    ErrorChar = 116

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class StartContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jacParser.EOF, 0)

        def ver_label(self):
            return self.getTypedRuleContext(jacParser.Ver_labelContext, 0)

        def import_module(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jacParser.Import_moduleContext)
            else:
                return self.getTypedRuleContext(jacParser.Import_moduleContext, i)

        def element(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(jacParser.ElementContext)
            else:
                return self.getTypedRuleContext(jacParser.ElementContext, i)

        def getRuleIndex(self):
            return jacParser.RULE_start

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)

    def start(self):
        localctx = jacParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == jacParser.T__0:
                self.state = 210
                self.ver_label()

            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == jacParser.KW_IMPORT:
                self.state = 213
                self.import_module()
                self.state = 218
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 222
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << jacParser.KW_TYPE)
                        | (1 << jacParser.KW_GRAPH)
                        | (1 << jacParser.KW_NODE)
                        | (1 << jacParser.KW_EDGE)
                        | (1 << jacParser.KW_WALKER)
                        | (1 << jacParser.KW_ASYNC)
                        | (1 << jacParser.KW_TEST)
                    )
                )
                != 0
            ) or _la == jacParser.KW_GLOBAL:
                self.state = 219
                self.element()
                self.state = 224
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 225
            self.match(jacParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ver_labelContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(jacParser.COLON, 0)

        def STRING(self):
            return self.getToken(jacParser.STRING, 0)

        def SEMI(self):
            return self.getToken(jacParser.SEMI, 0)

        def getRuleIndex(self):
            return jacParser.RULE_ver_label

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVer_label"):
                listener.enterVer_label(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVer_label"):
                listener.exitVer_label(self)

    def ver_label(self):
        localctx = jacParser.Ver_labelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ver_label)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 227
            self.match(jacParser.T__0)
            self.state = 228
            self.match(jacParser.COLON)
            self.state = 229
            self.match(jacParser.STRING)
            self.state = 231
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == jacParser.SEMI:
                self.state = 230
                self.match(jacParser.SEMI)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_moduleContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IMPORT(self):
            return self.getToken(jacParser.KW_IMPORT, 0)

        def LBRACE(self):
            return self.getToken(jacParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(jacParser.RBRACE, 0)

        def KW_WITH(self):
            return self.getToken(jacParser.KW_WITH, 0)

        def STRING(self):
            return self.getToken(jacParser.STRING, 0)

        def SEMI(self):
            return self.getToken(jacParser.SEMI, 0)

        def import_items(self):
            return self.getTypedRuleContext(jacParser.Import_itemsContext, 0)

        def STAR_MUL(self):
            return self.getToken(jacParser.STAR_MUL, 0)

        def getRuleIndex(self):
            return jacParser.RULE_import_module

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterImport_module"):
                listener.enterImport_module(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitImport_module"):
                listener.exitImport_module(self)

    def import_module(self):
        localctx = jacParser.Import_moduleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 233
            self.match(jacParser.KW_IMPORT)
            self.state = 234
            self.match(jacParser.LBRACE)
            self.state = 237
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [
                jacParser.NODE_DBL_COLON,
                jacParser.EDGE_DBL_COLON,
                jacParser.WALKER_DBL_COLON,
                jacParser.GRAPH_DBL_COLON,
                jacParser.TYPE_DBL_COLON,
                jacParser.KW_GLOBAL,
            ]:
                self.state = 235
                self.import_items()
                pass
            elif token in [jacParser.STAR_MUL]:
                self.state = 236
                self.match(jacParser.STAR_MUL)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 239
            self.match(jacParser.RBRACE)
            self.state = 240
            self.match(jacParser.KW_WITH)
            self.state = 241
            self.match(jacParser.STRING)
            self.state = 242
            self.match(jacParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_itemsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WALKER_DBL_COLON(self):
            return self.getToken(jacParser.WALKER_DBL_COLON, 0)

        def STAR_MUL(self):
            return self.getToken(jacParser.STAR_MUL, 0)

        def import_names(self):
            return self.getTypedRuleContext(jacParser.Import_namesContext, 0)

        def COMMA(self):
            return self.getToken(jacParser.COMMA, 0)

        def import_items(self):
            return self.getTypedRuleContext(jacParser.Import_itemsContext, 0)

        def NODE_DBL_COLON(self):
            return self.getToken(jacParser.NODE_DBL_COLON, 0)

        def EDGE_DBL_COLON(self):
            return self.getToken(jacParser.EDGE_DBL_COLON, 0)

        def GRAPH_DBL_COLON(self):
            return self.getToken(jacParser.GRAPH_DBL_COLON, 0)

        def KW_GLOBAL(self):
            return self.getToken(jacParser.KW_GLOBAL, 0)

        def DBL_COLON(self):
            return self.getToken(jacParser.DBL_COLON, 0)

        def TYPE_DBL_COLON(self):
            return self.getToken(jacParser.TYPE_DBL_COLON, 0)

        def getRuleIndex(self):
            return jacParser.RULE_import_items
